<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color">


    <ImageView
        android:id="@+id/iv_frag_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/bmw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_frag_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/log_in"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_frag_login" />

    <Button
        android:id="@+id/btn_facebook_login_frag"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape_secondary"
        android:foregroundTint="@color/button_shape_secondary"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/text_color_primary"
        app:layout_constraintEnd_toStartOf="@+id/btn_google_login_frag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frag_login" />


    <Button
        android:id="@+id/btn_google_login_frag"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_secondary"
        android:foregroundTint="@color/button_shape_secondary"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/text_color_primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn_facebook_login_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook_login_frag"
        app:layout_constraintTop_toTopOf="@+id/btn_facebook_login_frag" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textColor="@color/text_color_secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_google_login_frag"
        app:layout_constraintStart_toStartOf="@+id/btn_facebook_login_frag"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook_login_frag" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@color/text_color_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:background="@color/text_color_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_or" />


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/edittext_card"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:neumorph_lightSource="leftTop"
        app:neumorph_shadowColorDark="@color/shadow_dark"
        app:neumorph_shadowColorLight="@color/shadow_light"
        app:neumorph_shadowElevation="2dp"
        app:neumorph_shapeAppearance="@style/ShapeAppearance"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/ed_email_login_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_secondary" />

    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/cv_password_login_frag"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/edittext_card"
        app:layout_constraintStart_toStartOf="@+id/edittext_card"
        app:layout_constraintTop_toBottomOf="@+id/edittext_card"
        app:neumorph_lightSource="leftTop"
        app:neumorph_shadowColorDark="@color/shadow_dark"
        app:neumorph_shadowColorLight="@color/shadow_light"
        app:neumorph_shadowElevation="2dp"
        app:neumorph_shapeAppearance="@style/ShapeAppearance"
        app:neumorph_shapeType="pressed">


        <EditText
            android:id="@+id/ed_password_login_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text_color_primary"
            android:textColorHint="@color/text_color_secondary" />
    </soup.neumorphism.NeumorphCardView>

    <TextView
        android:id="@+id/tv_forget_password_login_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/forget_password"
        android:textColor="@color/text_color_secondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cv_password_login_frag"
        app:layout_constraintTop_toBottomOf="@+id/cv_password_login_frag" />


    <Button
        android:id="@+id/btn_log_in_login_frag"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_shape_primary"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_forget_password_login_frag"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget_password_login_frag" />


    <TextView
        android:id="@+id/tv_create_new_account_login_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/button_shape_secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_skip_login_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_in_login_frag" />


    <TextView
        android:id="@+id/tv_skip_login_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/skip"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>